# libawsclient

./: .gitignore  .travis.yml  Makefile.am  README.md  attributes.h  aws_string.c  aws_string.h  base64.c  bucket.c  bucket_spec.c  configure.ac  curl_slist.c  curl_slist.h  http.c  http.h  libawsclient-uninstalled.pc.in  libawsclient.h  libawsclient.pc.in  libs3client.h  mem.c  mem.h  p_libawsclient.h  p_libs3client.h  request.c  request_spec.c  s3cat.c  sign.c  sign_spec.c  string.c
debian/: .gitignore  awsclient-utils.install  control  libawsclient-dev.install  libawsclient.install  rules
man1/: s3cat.1
t/: .gitignore  Makefile.am  bucket_spec.c  request_spec.c  sign_spec.c
